[package]
name = "intelligent_deduplicator"
version = "0.3.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
walkdir = "2.4.0"
rayon = "1.8"
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
